# DynaCoRE

./: ':w  .gitignore  3  :<Plug>(multiple-cursors-apply)<Plug>(multiple-cursors-detect)w  <Plug>(multiple-cursors-apply)<Plug>(multiple-cursors-detect)  <Plug>(multiple-cursors-apply)<Plug>(multiple-cursors-detect)w  CMakeLists.txt  README.md  config.h.cmake  main.cpp
Addition/: .params  README.md  bash_test.sh  data_locate.sh  data_save_nas.sh  data_save_video.sh  simulation_data_copy.sh  webcamTesting.scpt
Addition/Data_Manager/: .#Status_Display.cpp  CMakeLists.txt  DataSave.cpp  data_protocol.h
Addition/ExternalControl/: CMakeLists.txt  ExternalControl.cpp  ExternalControl.hpp
Addition/Python_codes/: com_pos.txt  com_vel.txt  command.txt  foot_pos.py  phase_plane.py  plot_LED_body.py  plot_LED_kin.py  plot_body.py  plot_com_pos_vel.py  plot_ekf.py  plot_foot.py  plot_joint.py  plot_lfoot.py  plot_motor_current.py  plot_multiple.py  plot_phase_traj.py  plot_reaction_force.py  plot_rfoot.py  plot_torque.py  script_plot.sh  steven_plot_imu.py  time.txt  torque.py  torque.txt  torque_com_pos.py
DynaController/: CMakeLists.txt  Controller.hpp  Test.cpp  Test.hpp  interface.hpp
DynaController/Atlas_Controller/: Atlas_DynaControl_Definition.h  Atlas_InvKinematics.cpp  Atlas_InvKinematics.hpp  Atlas_StateEstimator.cpp  Atlas_StateEstimator.hpp  Atlas_StateProvider.cpp  Atlas_StateProvider.hpp  Atlas_interface.cpp  Atlas_interface.hpp  CMakeLists.txt
DynaController/DracoBip_Controller/: CMakeLists.txt  DracoBip_DynaCtrl_Definition.h  DracoBip_MoCapManager.hpp  DracoBip_StateEstimator.cpp  DracoBip_StateEstimator.hpp  DracoBip_StateProvider.cpp  DracoBip_StateProvider.hpp  DracoBip_interface.cpp  DracoBip_interface.hpp  MoCapManager.cpp  MoCapManager.hpp
DynaController/Mercury_Controller/: CMakeLists.txt  ExtCtrlReceiver.cpp  Mercury_DynaControl_Definition.h  Mercury_InvKinematics.cpp  Mercury_InvKinematics.hpp  Mercury_StateEstimator.cpp  Mercury_StateEstimator.hpp  Mercury_StateProvider.cpp  Mercury_StateProvider.hpp  Mercury_interface.cpp  Mercury_interface.hpp  MoCapManager.cpp  MoCapManager.hpp  WBWC.cpp  WBWC.hpp
DynaController/SagitP3_Controller/: SagitP3_DynaCtrl_Definition.h  SagitP3_StateEstimator.cpp  SagitP3_StateProvider.cpp  SagitP3_interface.cpp  SagitP3_state_interface.cpp
DynaController/Valkyrie_Controller/: CMakeLists.txt  Valkyrie_DynaControl_Definition.h  Valkyrie_InvKinematics.cpp  Valkyrie_InvKinematics.hpp  Valkyrie_StateEstimator.cpp  Valkyrie_StateEstimator.hpp  Valkyrie_StateProvider.cpp  Valkyrie_StateProvider.hpp  Valkyrie_interface.cpp  Valkyrie_interface.hpp
ExternalSource/Optimizer/: CMakeLists.txt
ExternalSource/Optimizer/Goldfarb/: Array.hh  QuadProg++.cc  QuadProg++.hh
ExternalSource/Optimizer/nlopt/: CMakeLists.txt
ExternalSource/Optimizer/snopt/: CMakeLists.txt
ExternalSource/Optimizer/snopt/examples/: CMakeLists.txt
ExternalSource/Optimizer/snopt/examples/cppexamples/: CMakeLists.txt
ExternalSource/Optimizer/snopt/examples/cppexamples_for_sejong/: CMakeLists.txt
ExternalSource/ParamHandler/: CMakeLists.txt  ParamHandler.cpp
ExternalSource/rbdl/: CMakeLists.txt  Contacts.cc  Kinematics.cc  Kinematics.h  SpatialAlgebraOperators.h  urdfreader.cc  urdfreader.h
ExternalSource/urdf/: link.cpp  link.h  model.cpp
Filter/: CMakeLists.txt  filters.cpp  filters.hpp
Planner/PIPM_FootPlacementPlanner/: Reversal_LIPM_Planner.cpp  Reversal_LIPM_Planner.hpp
RobotSystems/: CMakeLists.txt  RobotSystem.hpp
Simulator/: CMakeLists.txt
Simulator/DART/: CMakeLists.txt  README.md  main_interface_test.cpp
Simulator/DART/DART_Systems/: CMakeLists.txt
Simulator/DART/DART_Systems/Mercury/: CMakeLists.txt  MercuryEventHandler.cpp  SIMULATION_setup.yaml  main.cpp  worldnode.cpp  worldnode.hpp
Simulator/DART/DART_Systems/MiniCheetah/: Main.cpp
Simulator/DART/DART_Systems/Valkyrie/: CMakeLists.txt  ValkyrieWorldNode.cpp  ValkyrieWorldNode.hpp
Simulator/DART/DART_Systems/Valkyrie_WBLC/: CMakeLists.txt
Simulator/srSimulator/: CMakeLists.txt
Simulator/srSimulator/Renderer/: CMakeLists.txt  Model3DS.cpp  ModelMesh.cpp  ModelMesh.h  SimpleRenderer.cpp  SimpleRenderer.h  SimpleViewer.cpp  SimpleViewer.h
Simulator/srSimulator/Systems/Atlas/: Atlas.cpp  Atlas_Dyn_environment.cpp  Atlas_Dyn_environment.h
Simulator/srSimulator/Systems/DracoBip/: CMakeLists.txt  DracoBip.cpp  DracoBip.h  DracoBip_Dyn_environment.cpp  DracoBip_Dyn_environment.h
Simulator/srSimulator/Systems/DracoBiped/: CMakeLists.txt  DracoBiped.cpp  DracoBiped.h  DracoBiped_Dyn_environment.cpp  DracoBiped_Dyn_environment.h  simulation_DracoBiped.cpp
Simulator/srSimulator/Systems/Mercury/: CMakeLists.txt  LED_Position_Announcer.cpp  LED_Position_Announcer.hpp  Mercury.cpp  Mercury_Dyn_environment.cpp  Mercury_Dyn_environment.hpp
Simulator/srSimulator/Systems/MiniCheetah/: MiniCheetah.cpp  MiniCheetah_Dyn_environment.cpp  simulation_MiniCheetah.cpp
Simulator/srSimulator/Systems/Mini_cheetah/: CMakeLists.txt  MiniCheetah.cpp  MiniCheetah_Dyn_environment.cpp  MiniCheetah_Dyn_environment.h  simulation_MiniCheetah.cpp
Simulator/srSimulator/Systems/NAO/: CMakeLists.txt  NAO_Dyn_environment.cpp  NAO_Dyn_environment.h
Simulator/srSimulator/Systems/Quadruped/: Quadruped_Dyn_environment.cpp  simulation_Quadruped.cpp
Simulator/srSimulator/Systems/SagitP3/: SagitP3.cpp  SagitP3_Dyn_environment.cpp  SagitP3_Dyn_environment.hpp
Simulator/srSimulator/Systems/Valkyrie/: CMakeLists.txt  new_valkyrie.cpp  valkyrie_Dyn_environment.cpp  valkyrie_Dyn_environment.h
Simulator/srSimulator/assimp/: CMakeLists.txt
Simulator/srSimulator/assimp/code/: CMakeLists.txt
Simulator/srSimulator/srDyn/: srGeometryInfo.cpp  srGeometryInfo.h  srSpace.cpp
Simulator/srSimulator/srSysGenerator/: CMakeLists.txt  SystemGenerator.cpp  SystemGenerator.h  SystemGenerator_ParamSet.cpp
Simulator/srSimulator/srg/: srgBitmap.cpp  srgCamera.cpp
Utils/: CMakeLists.txt  DataManager.cpp  DataManager.hpp  wrap_eigen.cpp  wrap_eigen.hpp
WBC/: CMakeLists.txt  Task.hpp
WBC/WBDC/: WBDC.cpp  (+5 more)
(+371 files in other folders)
